# revenue-engine

./: Anchor.toml  Cargo.toml  LICENSE  README.md  README_kr.md  package.json  tsconfig.json
app/: .env  package.json  tsconfig.json
app/db/: agent_data.sqlite
app/src/: agent.ts  db.ts  server.ts
app/src/types/: mock_swap_program.ts  revenue_engine.ts  staking_program.ts
frontend/: .env  config-overrides.js  package.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/ui/: InfoCard.tsx  LogViewer.tsx
frontend/src/hooks/: useApiPolling.ts  useSolanaDataPolling.ts
frontend/src/idl/: mock_swap_program.json  revenue_engine.json  staking_program.json
frontend/src/lib/: solana.ts  utils.ts
frontend/src/pages/: AgentMonitorPage.tsx  GlobalDashboardPage.tsx  StakingClaimPage.tsx
frontend/src/types/: revenue_engine.ts
programs/mock_swap_program/: Cargo.toml  readme.md
programs/mock_swap_program/src/: lib.rs
programs/revenue_engine/: Cargo.toml
programs/revenue_engine/src/: lib.rs  state.rs
programs/staking_program/: Cargo.toml
programs/staking_program/src/: errors.rs  lib.rs  state.rs
scripts/: init.ts  prepare-keypairs.sh
tests/: haio-seoulana.ts
