[package]
name = "mock_swap_program"
version = "0.1.0"
description = "A simple Mock Swap program for USDC/HAiO"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mock_swap_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0" 
anchor-spl = "0.31.0"