[package]
name = "revenue_engine"
version = "0.1.0"
description = "HAiO Core Revenue Distribution Engine"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "revenue_engine"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.0"
anchor-spl = "0.31.0"
